--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -3,6 +3,6 @@
         <link rel="stylesheet" href="styles/styles.css" />
     </head>
     <body>
-        Hello From Ambrosh
+        Hello From Ambrosh.......
     </body>
 </html>
